# pylitegen

./: README.md  pytest.ini  reinstall-localpyqlite.sh  requirements.txt  requirements_test.txt  setup.cfg
completedform/: main.py
completedform/model/: products.py  users.py
completedform/script/: test_db.py
example/db/: __init__.py  db.py  querybuilder.py  test.db
example/model/: __init__.py  base_model.py  model.py  orders.py  products.py  user.py  user_edited_history.py  users.py
example/script/: __init__.py  create_test_db.py  test_db.py
pylitegen/: main.py  tweets-collector.db
pylitegen/db/: metadata.py  model_gen.py
pylitegen/utils/: file.py  string.py
pyqlite/: main.py
pyqlite/db/: __init__.py  column.py  db.py  isolation_level.py  querybuilder.py  transaction_scope.py
pyqlite/generator/: __init__.py  column.py  dbmetadata.py  generator.py  model_file_generator.py
pyqlite/log/: __init__.py
pyqlite/model/: __init__.py  base_model.py
pyqlite/utils/: file.py  string.py  stringbuilder.py
scripts/: release.sh  test-release.sh
tests/: create_test_db.py  import_path_resolver.py  test_column.py  test_db.py  test_dbmetadata.py  test_generator.py  test_metadata.py  test_model_file_generator.py  test_querybuilder.py  test_transaction_scope.py
tests/example/: path_resolver.py  test_db.py  test_querybuilder.py
