[metadata]
name = pyqlite
version = 1.0.0
license = Apache License Version 2.0

; [options.entry_points]
; console_scripts =
;     foo = package_name.module_name:func_name
;     foo_dev = package_name.module_name:func_name [develop]
; gui_scripts =
;     bar = gui_package_name.gui_module_name:gui_func_name
